Add support for unobfuscated versions